# javahelloworld

./: .dockerignore  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  HOW_TO_CHECK_BACKEND_LOGS.md  HOW_TO_CHECK_LOGS.md  QUICK_START.md  README.md  README_LOCAL_SCRIPTS.md  SCRIPTS_OVERVIEW.md  SCRIPTS_SEPARATION.md  SUPABASE_SETUP.md  api.py  docker-compose.yml  fix_bracket_issue.md  main.py  models.py  pyproject.toml  restart-all.sh  start-all.sh  stop-all.sh  trading_service.py  view-logs.sh
backend/: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt  restart.sh  start.sh  stop.sh  test_auth0_config.py  test_auth0_config_simple.py  test_backend_endpoint.py  test_fear_greed_api.py  test_fear_greed_endpoint.py  test_login.py  view_logs.sh
backend/frontend/: package-lock.json  package.json
backend/scripts/: migrate_users_to_supabase.py
backend/src/api/: routes.py  supabase_routes.py
backend/src/auth/: client_auth.py  email_validator.py
backend/src/auth/supabase/: __init__.py  client.py  config.py  middleware.py
backend/src/config/: __init__.py  logging_config.py
backend/src/delta_rest_client/: __init__.py  delta_rest_client.py
backend/src/models/: __init__.py
backend/src/services/: orders_service.py  pnl_service.py  positions_service.py  trading_service.py
backend/src/strategies/: __init__.py  base_strategy.py  strategy_manager.py
backend/src/strategies/breakout/: __init__.py  (+3 more)
backend/src/utils/: logging_utils.py
backend/tests/: __init__.py  test_orders_service.py  test_pnl_service.py  test_positions_service.py
(+150 files in other folders)
